# ascend-variant-provider

./: README.md  pyproject.toml
ascend_variant_provider/: __init__.py  detect_ascend.py  plugin.py  pysmi.py
docs/: index.html
docs/ascend-variant-provider/: ascend_variant_provider-0.0.2-py3-none-any.whl  index.html
