[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.uv]
package = true

[project]
name = "ascend-variant-provider"
dependencies = []
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dynamic = ["version", "description"]

[project.entry-points.variant_plugins]
ascend_variant_provider = "ascend_variant_provider.plugin:AscendVariantPlugin"

[tool.isort]
profile = "black"

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache",
    ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules",
    "venv", "*/migrations/*.py", "staticfiles/*",
]